# hccl-agent

./: .gitignore  CLAUDE.md  README.MD  main.py  project_tree.txt
agent/: auto_tuning_skill.py  benchmark_skill.py  calibration_explanation_skill.py  code_generation_skill.py  convergence_analysis_skill.py  decision_skill.py  evaluation_skill.py  execution_skill.py  experience_store.py  experiment_logger.py  explanation_skill.py  hccl_agent.py  knowledge_report_skill.py  llm_client.py  optimization_loop_skill.py  optimization_proposal_skill.py  planning_skill.py  plugin_capability.py  plugin_manager.py  policy_engine.py  prompt_engine.py  reasoning_skill.py  reflection_skill.py  replanning_skill.py  report_generator.py
analysis/: algorithm_sensitivity.py  auto_tuning_analysis.py  calibration_report.py  scaling_analysis.py  topology_sensitivity.py
calibration/: calibration_profile.py  calibration_registry.py
config/: cluster.json
cost_model/: engine.py
docs/: 2026年中国研究生人工智能大赛--华为赛题.docx  agent_capabilities.md  cann_hccl_interface_guide.md  competition_analysis.md  deepseek_setup.md  gap_analysis.md  project_documentation.md  simulator_guide.md
experiments/: benchmark_runner.py
hardware/: affinity_engine.py  node_profile.py  profile.py  resource_manager.py
hcccl/: CMakeLists.txt  README.md
hcccl/include/: hccl_algorithms.h  hccl_comm.h
hcccl/src/: hccl_algorithms.c  hccl_comm.c
hcccl/tests/: test_butterfly.c  test_fattree.c  test_mesh.c  test_nhr.c  test_ring.c  test_topology.c
knowledge/: knowledge_base.py
plugin/: execution_engine.py  hccl_api.py  hccl_bridge.py
prompts/: algorithm_prompt.txt
scripts/: generate_report.py  integration_test.sh
simulator/: failover_engine.py  fault_injector.py  health_monitor.py  retry_policy.py  simulator.py
skills/: algorithm_selector.py  algorithm_skill.py  benchmark_suite_skill.py  case_retrieval_skill.py  config_skill.py  decision_validation_skill.py  experience_learning_skill.py  hardware_reasoning_skill.py  knowledge_extraction_skill.py  optimization_skill.py  performance_model.py  strategy_skill.py  topology_graph.py  topology_reasoning_skill.py  topology_skill.py
tests/: test_affinity_engine.py  test_agent.py  test_algorithm_reflection.py  test_algorithm_selection_flow.py  test_algorithm_selector.py  (+72 more)
(+28 files in other folders)
